ACCUMULO-4490 Simplify Accumulo scripts and config
* Created accumulo-service & accumulo-cluster commands
* Updated accumulo command and improved usage
* Native libraries are not built using 'accumulo native'
* Accumulo config is now created using 'accumulo config'
* The release only contains one set of example config in 'conf/examples'
* Updated INSTALL.md to reflect script and config changes
* Accumulo falls back to conf/examples when configuring logging
* Combined several cluster-related scripts into cluster.sh
* Combined service/daemon related scripts in service.sh
* Deleted config scripts and created load-env.sh
* Moved build-native-library code from script to accumulo command
* Reduced number of directories in tarball by placing scripts in lib
  and examples, test, and proxy into new opt directory
* Removed references to ACCUMULO_HOME to ease downstream packaging
* Updated script references in documentation
* Removed unnecessary classpath settings in core/src/test files
* Removed accumulo-site.xml in core/src/test that is not being used

--- a/assemble/scripts/templates/accumulo-site.xml
+++ b/assemble/scripts/templates/accumulo-site.xml
@@ -126,12 +126,12 @@ ${mvnProjBaseDir}
 
     <value>
       <!-- Accumulo requirements -->
-      $ACCUMULO_HOME/lib/accumulo-server.jar,
-      $ACCUMULO_HOME/lib/accumulo-core.jar,
-      $ACCUMULO_HOME/lib/accumulo-start.jar,
-      $ACCUMULO_HOME/lib/accumulo-fate.jar,
-      $ACCUMULO_HOME/lib/accumulo-proxy.jar,
-      $ACCUMULO_HOME/lib/[^.].*.jar,
+      $ACCUMULO_LIB_DIR/accumulo-server.jar,
+      $ACCUMULO_LIB_DIR/accumulo-core.jar,
+      $ACCUMULO_LIB_DIR/accumulo-start.jar,
+      $ACCUMULO_LIB_DIR/accumulo-fate.jar,
+      $ACCUMULO_LIB_DIR/accumulo-proxy.jar,
+      $ACCUMULO_LIB_DIR/[^.].*.jar,
       <!-- ZooKeeper requirements -->
       $ZOOKEEPER_HOME/zookeeper[^.].*.jar,
       <!-- Common Hadoop requirements -->
